--- a/robocode-basic/build.gradle
+++ b/robocode-basic/build.gradle
@@ -3,5 +3,6 @@ apply from: "$rootProject.projectDir/build.gradle"
 dependencies {
     dependencies {
         compile fileTree(dir: '../lib', include: ['*.jar'])
+        compile project(':mathematic')
     }
 }
