--- a/robocode-basic/src/main/resources/oleogin/BrainControllingRobot.properties
+++ b/robocode-basic/src/main/resources/oleogin/BrainControllingRobot.properties
@@ -1,6 +1,6 @@
 robot.java.source.included=true
 robot.version=1
 robot.author.name=AssKicker
-robot.classname=oleogin.BaseRobot
+robot.classname=oleogin.BrainControllingRobot
 robot.name=BaseRobot
 robot.description=fuck up
