--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'robocode-properly'
 include 'robocode-simulator'
 include 'robocode-basic'
 include 'mathematic'
+include 'reinforcement'
+include 'regression'
